--- a/gift.html
+++ b/gift.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="shortcut icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/6235/6235085.png" />
     <title>メリークリスマス!</title>
     <!-- Google Font -->
