--- a/gift.html
+++ b/gift.html
@@ -19,7 +19,7 @@
 <body>
     <div>
         <h1> Merry Christmas</h1>
-        <img src="./img/Drawing4Mate.png" width="2rem">
+        <img src="./img/Drawing4Mate.png" style="width-2rem">
     </div>
 </body>
 
