--- a/gift.html
+++ b/gift.html
@@ -18,7 +18,7 @@
 
 <body>
     <div>
-        <h1> Merry Christmas</h1>
+        <h1 class="gifttitle"> Merry Christmas</h1>
         <img src="./img/Drawing4Mate.png" style="width-2rem">
     </div>
 </body>
