--- a/gift.html
+++ b/gift.html
@@ -17,8 +17,7 @@
 </head>
 
 <body>
-    <div>
-        <h1 class="gifttitle"> Merry Christmas</h1>
+    <h1 style="text-align:center; color:#fff; font-size: 2rem;"> Merry Christmas</h1>
         <img src="./img/Drawing4Mate.png" style="width-2rem">
     </div>
 </body>
