--- a/gift.html
+++ b/gift.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- My Style -->
-    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/gift.css" />
 </head>
 
 <body>
