--- a/gift.html
+++ b/gift.html
@@ -18,7 +18,7 @@
 
 <body>
     <h1 style="text-align:center; color:#fff; font-size: 2rem;"> Merry Christmas</h1>
-        <img src="./img/Drawing4Mate.png" style="width-2rem">
+        <img src="./img/Drawing4Mate.png" width=100vw>
     </div>
 </body>
 
