--- a/gift.html
+++ b/gift.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-    <h1 style="text-align:center; color:#fff; font-size: 2rem;"> Merry Christmas</h1>
+    <h1 class="text" style="font-size: 2rem;"> Merry Christmas</h1>
+    <h2 class="text" style="font-size:1rem;">i drew this for you c:</h2>
         <img src="./img/Drawing4Mate.png" width="4rem">
     </div>
 </body>
