--- a/gift.html
+++ b/gift.html
@@ -19,7 +19,7 @@
 <body>
     <h1 class="text" style="font-size: 2rem;"> Merry Christmas</h1>
     <h2 class="text" style="font-size:1rem;">i drew this for you c:</h2>
-        <img src="./img/Drawing4Mate.png" width="4rem">
+        <img src="./img/Drawing4Mate.png" width="75px">
     </div>
 </body>
 
