--- a/gift.html
+++ b/gift.html
@@ -18,8 +18,9 @@
 
 <body>
     <h1 class="text" style="font-size: 2rem;"> Merry Christmas</h1>
-    <h2 class="text" style="font-size:1rem;">i drew this for you c:</h2>
-        <img src="./img/Drawing4Mate.png" width="75px">
+    <h2 class="text" style="font-size:1rem;">i drew this for you c: </h2>
+
+    <img src="./img/Drawing4Mate.png" alt="Drawinggggg" class="profile-picture" id="imagePath"/>
     </div>
 </body>
 
