--- a/gift.html
+++ b/gift.html
@@ -20,7 +20,8 @@
     <h1 class="text" style="font-size: 2rem;"> Merry Christmas</h1>
     <h2 class="text" style="font-size:1rem;">i drew this for you c: </h2>
 
-    <img src="./img/Drawing4Mate.png" alt="Drawinggggg" class="profile-picture" id="imagePath"/>
+    <div style="text-align: center;">
+        <img src="./img/Drawing4Mate.png" alt="Drawinggg" style="max-width: 100%; height: auto;">
     </div>
 </body>
 
