--- a/gift.html
+++ b/gift.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-    <h1 class="text" style="font-size: 2rem;"> Merry Christmas</h1>
+    <h1 class="text" style="font-size: 3rem;"> Merry Christmas</h1>
     <h2 class="text" style="font-size:1rem;">i drew this for you c: </h2>
 
-    <div style="text-align: center;">
+    <div style="text-align: center; color: #bdbdbd;">
         <img src="./img/Drawing4Mate.png" alt="Drawinggg" style="max-width: 100%; height: auto;">
     </div>
 </body>
