--- a/gift.html
+++ b/gift.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <h1 class="text" style="font-size: 3rem; color: #bdbdbd;"> Merry Christmas</h1>
-    <h2 class="text" style="font-size:1rem;">i drew this for you c: </h2>
+    <h1 class="text" style="font-size: 3rem;"> Merry Christmas</h1>
+    <h2 class="text" style="font-size:1rem; color: #bdbdbd;">i drew this for you c: </h2>
 
     <div style="text-align: center;>
         <img src="./img/Drawing4Mate.png" alt="Drawinggg" style="max-width: 100%; height: auto;">
