--- a/gift.html
+++ b/gift.html
@@ -18,7 +18,7 @@
 
 <body>
     <h1 class="text" style="font-size: 3rem;"> Merry Christmas</h1>
-    <h2 class="text" style="font-size:1rem; color: #bdbdbd;">i drew this for you c: </h2>
+    <h2 class="text" style="font-size:1rem; color: #bfbfbf;"> i drew this for you c: </h2>
 
     <div style="text-align: center;">
   <img src="./img/Drawing4Mate.png" alt="Image" style="max-width: 100%; height: auto;">
