--- a/gift.html
+++ b/gift.html
@@ -23,5 +23,7 @@
     <div style="text-align: center;">
   <img src="./img/Drawing4Mate.png" alt="Image" style="max-width: 100%; height: auto;">
 </div>
+<div>
+<a href="index.html" style="color:#000; font-size:10px; text-align: right"> Go back </a>
 
 </html>
