--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
                 <strong>better</strong>
                 .
             </p>
-            <p class="idea-4">because, i care for you</p>
+            <p class="idea-4">so i coded this website</p>
             <p class="idea-5">
-                and i want you 
-                to be happy
-                forever
+                because i really care about you
                 <span>:3</span>
             </p>
             <p class="idea-6">
