--- a/gift.html
+++ b/gift.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <h1 class="text" style="font-size: 3rem;"> Merry Christmas</h1>
+    <h1 class="text" style="font-size: 3rem;"> Merry <br> Christmas</h1>
     <h2 class="text" style="font-size:1rem; color: #bfbfbf;"> i drew this for you c: </h2>
 
     <div style="text-align: center;">
