--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="three">
             <p>
-                i wanted to write you smth
+                i was gonna write you smth like...
             </p>
         </div>
 
@@ -58,7 +58,7 @@
 </div>
 
         <div class="five">
-            <p class="idea-1">is what i was gonna send you...</p>
+            <p class="idea-1">and was just gonna send it</p>
             <p class="idea-2">but yk how i be sometimes</p>
             <p class="idea-3">
                 i really wanted to do <em style="color: #969696, font-weight: bold, font-size: 3rem">something</em><br>
