--- a/gift.html
+++ b/gift.html
@@ -17,13 +17,16 @@
 </head>
 
 <body>
-    <h1 class="text" style="font-size: 3rem;"> Merry <br> Christmas</h1>
-    <h2 class="text" style="font-size:1rem; color: #bfbfbf;"> i drew this for you c: </h2>
-
-    <div style="text-align: center;">
-  <img src="./img/Drawing4Mate.png" alt="Image" style="max-width: 100%; height: auto;">
-</div>
-<div>
-<a href="index.html" style="color:#000; font-size:10px; text-align: right"> Go back </a>
-
+    <div class="container">
+        <h1 class="text" style="font-size: 3rem;"> Merry <br> Christmas</h1>
+        <h2 class="text" style="font-size:1rem; color: #bfbfbf;"> i drew this for you c: </h2>
+    
+        <div style="text-align: center;">
+          <img src="./img/Drawing4Mate.png" alt="Image" style="max-width: 100%; height: auto;">
+        </div>
+        <div>
+            <a href="index.html" style="color:#000; font-size:10px; text-align: right"> Go back </a>
+        </div>
+    </div>
+</body>
 </html>
