--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         </div>
 
         <p style="color: #fff;" class="hbd-chatbox"> 
-            Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! ... 
+            Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! I just want you to be happy... 
         </p>
         <p style="visibility:hidden" class="fake-btn">Send</p>
     </div>
 </div>
 
         <div class="five">
-            <p class="idea-1">and just send it</p>
-            <p class="idea-2">but yk how i be sometimes</p>
+            <p class="idea-1">and just send it but...</p>
+            <p class="idea-2"> yk how i be sometimes</p>
             <p class="idea-3">
                 i really wanted to do <em style="color: #969696, font-weight: bold, font-size: 3rem">something</em><br>
                 <strong>better</strong>
