--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="six">
-            <a href="gift.html"><img src="./img/present.png" alt="CLICK ME" class="profile-picture" id="imagePath"/></a>
+            <a href="./pages/gift.html"><img src="./img/present.png" alt="CLICK ME" class="profile-picture" id="imagePath"/></a>
             <div class="wish">
                 <h3 style="color: #07b516", class="wish-hbd">Happy Holidays!</h3>
                 <h5 style="color: #fff;", id="wishText">May you be blessed and happy for life <3 </h5>
