--- a/gift/gift.html
+++ b/gift/gift.html
@@ -21,7 +21,7 @@
         <h2 class="text" style="font-size:1rem; color: #bfbfbf;"> i drew this for you c: </h2>
     
         <div style="text-align: center;">
-          <img src="./img/Drawing4Mate.png" alt="Image" style="max-width: 100%; height: auto;">
+          <img src="./gift/Drawing4Mate.png" alt="Image" style="max-width: 100%; height: auto;">
         </div>
         <div>
             <a href="index.html" style="color:#446478; font-family: arial; font-size:20px; text-align: right"> Go back </a>
