--- a/gift/gift.html
+++ b/gift/gift.html
@@ -24,7 +24,7 @@
           <img src="./gift/Drawing4Mate.png" alt="Image" style="max-width: 100%; height: auto;">
         </div>
         <div>
-            <a href="index.html" style="color:#446478; font-family: arial; font-size:20px; text-align: right"> Go back </a>
+            <a href="https://rubyscarf.github.io/foryou/index.html" style="color:#446478; font-family: arial; font-size:20px; text-align: right"> Go back </a>
         </div>
 </body>
 </html>
