--- a/adventcalendar.html
+++ b/adventcalendar.html
@@ -131,7 +131,7 @@
         const content22 = "On the 22nd day of Christmas a robot gave to me... " + '<br><a href="./pages/story_1.html"><img width="200" src="./img/story_1.png"></a>' /* xmas story */;
         const content23 = "On the 23rd day of Christmas a robot gave to me... " + '<br><a href="./pages/story_2.html"><img width="200" src="./img/story_2.png"></a>' /* xmas story */;
         const content24 = "On the 24th day of Christmas a robot gave to me... " + '<br><a href="./pages/story_3.html"><img width="200" src="./img/story_3.png"></a>' /* xmas story */;
-        const content25 = "On the 25th day of Christmas a robot gave to me... " + '<br><a href=""><img width="200" src="./img/For_You.png"></a>' /* https://rubyscarf.github.io/foryou/ */;
+        const content25 = "On the 25th day of Christmas a robot gave to me... " + '<br><a href="https://rubyscarf.github.io/foryou/index.html"><img width="200" src="./img/For_You.png"></a>' /* https://rubyscarf.github.io/foryou/ */;
 
         function setSeen(id) {
             const seen = getSeen();
