--- a/adventcalendar.html
+++ b/adventcalendar.html
@@ -107,9 +107,9 @@
         }
 
         const year = 2023;
-        const content1 = "On the 1st day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/xmascard.png.png"></a>' /* xmas card */;
-        const content2 = "On the 2nd day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/frozen_1.png"></a>' /* xmas/frozen quote */;
-        const content3 = "On the 3rd day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/frozen_2.png"></a>' /* xmas/frozen quote */;
+        const content1 = "On the 1st day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/xmascard.png"></a>' /* xmas card */;
+        const content2 = "On the 2nd day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/quote_1.png"></a>' /* xmas/frozen quote */;
+        const content3 = "On the 3rd day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/quote_2.png"></a>' /* xmas/frozen quote */;
         const content4 = "On the 4th day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/crossword_1.png"></a>' /* crossword */;
         const content5 = "On the 5th day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/crossword_2.png"></a>' /* crossword */; 
         const content6 = "On the 6th day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/wordsearch_1.png"></a>' /* wordsearch */;
