--- a/adventcalendar.html
+++ b/adventcalendar.html
@@ -114,7 +114,7 @@
         const content5 = "On the 5th day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/crossword_2.png"></a>' /* crossword */; 
         const content6 = "On the 6th day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/wordsearch_1.png"></a>' /* wordsearch */;
         const content7 = "On the 7th day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/wordsearcg_2.png"></a>' /* wordsearch */;
-        const content8 = "On the 8th day of Christmas a robot gave to me... " + '<br><iframe href=""></iframe>' /* movie clip */;
+        const content8 = "On the 8th day of Christmas a robot gave to me... " + '<br><video height="200" src="./video/movie_1.mp4"><a href="https://www.youtube.com/watch?v=nBmNcy4zZNU&list=PLOWG8-ZtuwvHc6v5xEDUnvCjhqN3pNYQo&index=5">Link is here</a></video>' /* movie clip */;
         const content9 = "On the 9th day of Christmas a robot gave to me... " + '<br><iframe href=""></iframe>' /* movie clip */;
         const content10 = "On the 10th day of Christmas a robot gave to me... " + '<br><iframe href=""></iframe>' /* movie clip */;
         const content11 = "On the 11th day of Christmas a robot gave to me... " + '<br><iframe href=""></iframe>' /* movie clip */;
