--- a/quiz_1/quiz_1.html
+++ b/quiz_1/quiz_1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coding Quiz</title>
+  <title>Christmas Quiz #1</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -34,7 +34,7 @@
 
   <main class="container">
     <header class='row'>
-      <h1 class='col-md-12' id='quiz-title'>Coding Quiz</h1>
+      <h1 class='col-md-12' id='quiz-title'>Christmas Quiz #1</h1>
     </header>
 
     <section class="row name-input-row">
