--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -1,3 +1,6 @@
 <!DOCTYPE=html>
 <html>
+    <p>
+        Emily was walkinh back home from school on a light snow day. As she walked past her neighbor Philip's house, she heard a weird loud noise. Curious as to what it was, she slowly walked towards Philips garage. As she peaked through the window, she saw Philip 
+    </p>
 </html>
