--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -9,8 +9,24 @@
 </head>
 <body>
     <p>
-	    Emily was walking back home from school on a light snow day. As she walked past her neighbor Philip's house, she heard a weird loud noise. 
-	    Curious as to what it was, she slowly walked towards Philips garage. As she peaked through the window, she saw Philip 
+	    It was Friday, and Emily was walking back home from school on a light snow day. As she walked past her neighbor Phillip's house, she heard a weird, loud noise. 
+	    Curious as to what it was, she slowly walked towards Phillip's garage. As she peaked through the window, she saw Phillip covered in pieces of tape,
+        on the floor, and many scraps of paper. 
+        Emily rushes over to the front door to try to help him out. The door is unlocked (for some reason) so she heads over to the garage and shouts, "Are you okay, Phillip?!"
+        "Emily?" Phillip exclaims! "What are you doing here?"
+        "I heard you fall," she replies, "what are you doing?"
+        She helps Phillip get up and he explains how he was making paper snowflakes to decorate the Christmas tree with. Emily is intrigued by this, she has never set up a Christmas 
+        tree at her home. Her family is never home for the holidays and they never have time to set it up and decorate it together. Because of this, she doesn't bother setting it up 
+        herself. It would only haunt her. Emily can't bear the thought, so she leaves his house in a devastated mood. 
+        Realizing this, Phillip thinks of a brilliant idea. He is committed to giving Emily the best Christmas gift he can. 
+        That evening, Phillip calls all of his friends and tells them about his plan. They are all excited to help!
+        The next morning, Emily wakes up and goes downstairs to eat whatever goods she can find. She starts walking by the living room when she hears... 
+        "MERRY CHRISTMAS!!!" 
+        Emily freaks out for a second, then she realizes all of her friends are in her living room! 
+        "What are you all doing here?" Emily asks. 
+        Hillary comes forth and says, "We are here to create a holiday tradition!"
+        "Yeah, we are going to make snowflakes and hang them on the tree!" Phillip explains!
+        Emily is uncertain about what to say. They had broken into her home for starters-. 
     </p>
 </body>
 </html>
