--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -26,7 +26,23 @@
         "What are you all doing here?" Emily asks. 
         Hillary comes forth and says, "We are here to create a holiday tradition!"
         "Yeah, we are going to make snowflakes and hang them on the tree!" Phillip explains!
-        Emily is uncertain about what to say. They had broken into her home for starters-. 
+        Emily is uncertain about what to say, what to do, or how she feels. They had broken into her home for starters-. She looks around, getting a good look at each of her friend's faces. 
+	Each one of them smiled at her. Her family might not be there, but her loved ones are. There, as she was surrounded by her friends, she felt joy. 
+	They began decorating. The coffee table was covered in arts and crafts materials, the floor was a papery mess, and it was chaotic. But as Emily stared at her living room... 
+	she saw how it became a winter wonderland. Streamers and fairy lights hung from the ceiling, the Christmas tree in the corner, 
+	and the paper snowflakes filled every room. 
+	Phillip steps forward, his face apologetic. “Sorry we came out of nowhere, and for the mess.” He 
+	chuckles nervously, holding up a pair of scissors and a stack of paper. “We just wanted to make this Christmas special for you.”
+	Emily’s heart softens, though she tries to keep her tone firm. “You’re all crazy, you know that?”
+	“Crazy about giving you the best holiday ever!” Hillary chirps, handing Emily a piece of paper. “Come on, let’s make more snowflakes. We even have hot chocolate waiting.”
+	Despite her initial hesitation, Emily feels a warmth spreading in her chest, not just from the hot chocolate but from the thoughtfulness of her friends. 
+	By the time the sun sets, the tree is covered in paper snowflakes, sparkling lights, and a few mismatched ornaments that someone had brought along. Emily steps back to admire 
+	the scene. For the first time, her living room feels like a home filled with love and warmth.
+	Hillary places an arm around Emily’s shoulders. “So? What do you think?”
+	Emily blinks back tears and smiles. “I think… this is the best Christmas gift I’ve ever gotten. Thank you, all of you.”
+	Phillip grins. “You’re welcome! It was our pleasure.”
+	And as the friends gather around the tree, sipping hot chocolate and sharing stories, Emily realizes she’s started a tradition she never knew she needed. A tradition of love, 
+	laughter, and the reminder that she’s never truly alone.
     </p>
 </body>
 </html>
