--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -9,39 +9,39 @@
 </head>
 <body>
     <p>
-	It was Friday, and Emily was walking back home from school on a light snow day. As she walked past her neighbor Phillip's house, she heard a weird, loud noise. 
+	<br>It was Friday, and Emily was walking back home from school on a light snow day. As she walked past her neighbor Phillip's house, she heard a weird, loud noise. 
 	Curious as to what it was, she slowly walked towards Phillip's garage. As she peaked through the window, she saw Phillip covered in pieces of tape,
         on the floor, and many scraps of paper. 
-        Emily rushes over to the front door to try to help him out. The door is unlocked (for some reason) so she heads over to the garage and shouts, "Are you okay, Phillip?!"
-        "Emily?" Phillip exclaims! "What are you doing here?"
-        "I heard you fall," she replies, "what are you doing?"
-        She helps Phillip get up and he explains how he was making paper snowflakes to decorate the Christmas tree with. Emily is intrigued by this, she has never set up a Christmas 
+        <br>Emily rushes over to the front door to try to help him out. The door is unlocked (for some reason) so she heads over to the garage and shouts, "Are you okay, Phillip?!"
+        <br>"Emily?" Phillip exclaims! "What are you doing here?"
+        <br>"I heard you fall," she replies, "what are you doing?"
+        <br>She helps Phillip get up and he explains how he was making paper snowflakes to decorate the Christmas tree with. Emily is intrigued by this, she has never set up a Christmas 
         tree at her home. Her family is never home for the holidays and they never have time to set it up and decorate it together. Because of this, she doesn't bother setting it up 
         herself. It would only haunt her. Emily can't bear the thought, so she leaves his house in a devastated mood. 
-        Realizing this, Phillip thinks of a brilliant idea. He is committed to giving Emily the best Christmas gift he can. 
+        <br>Realizing this, Phillip thinks of a brilliant idea. He is committed to giving Emily the best Christmas gift he can. 
         That evening, Phillip calls all of his friends and tells them about his plan. They are all excited to help!
-        The next morning, Emily wakes up and goes downstairs to eat whatever goods she can find. She starts walking by the living room when she hears... 
-        "MERRY CHRISTMAS!!!" 
-        Emily freaks out for a second, then she realizes all of her friends are in her living room! 
-        "What are you all doing here?" Emily asks. 
-        Hillary comes forth and says, "We are here to create a holiday tradition!"
-        "Yeah, we are going to make snowflakes and hang them on the tree!" Phillip explains!
-        Emily is uncertain about what to say, what to do, or how she feels. They had broken into her home for starters-. She looks around, getting a good look at each of her friend's faces. 
+        <br>The next morning, Emily wakes up and goes downstairs to eat whatever goods she can find. She starts walking by the living room when she hears... 
+        <be><em>"MERRY CHRISTMAS!!!"</em>
+        <br>Emily freaks out for a second, then she realizes all of her friends are in her living room! 
+        <br>"What are you all doing here?" Emily asks. 
+        <br>Hillary comes forth and says, "We are here to create a holiday tradition!"
+        <br>"Yeah, we are going to make snowflakes and hang them on the tree!" Phillip explains!
+        <br>Emily is uncertain about what to say, what to do, or how she feels. They had broken into her home for starters-. She looks around, getting a good look at each of her friend's faces. 
 	Each one of them smiled at her. Her family might not be there, but her loved ones are. There, as she was surrounded by her friends, she felt joy. 
 	They began decorating. The coffee table was covered in arts and crafts materials, the floor was a papery mess, and it was chaotic. But as Emily stared at her living room... 
 	she saw how it became a winter wonderland. Streamers and fairy lights hung from the ceiling, the Christmas tree in the corner, 
 	and the paper snowflakes filled every room. 
-	Phillip steps forward, his face apologetic. “Sorry we came out of nowhere, and for the mess.” He 
+	<br>Phillip steps forward, his face apologetic. “Sorry we came out of nowhere, and for the mess.” He 
 	chuckles nervously, holding up a pair of scissors and a stack of paper. “We just wanted to make this Christmas special for you.”
 	Emily’s heart softens, though she tries to keep her tone firm. “You’re all crazy, you know that?”
 	“Crazy about giving you the best holiday ever!” Hillary chirps, handing Emily a piece of paper. “Come on, let’s make more snowflakes. We even have hot chocolate waiting.”
 	Despite her initial hesitation, Emily feels a warmth spreading in her chest, not just from the hot chocolate but from the thoughtfulness of her friends. 
 	By the time the sun sets, the tree is covered in paper snowflakes, sparkling lights, and a few mismatched ornaments that someone had brought along. Emily steps back to admire 
 	the scene. For the first time, her living room feels like a home filled with love and warmth.
-	Hillary places an arm around Emily’s shoulders. “So? What do you think?”
-	Emily blinks back tears and smiles. “I think… this is the best Christmas gift I’ve ever gotten. Thank you, all of you.”
-	Phillip grins. “You’re welcome! It was our pleasure.”
-	And as the friends gather around the tree, sipping hot chocolate and sharing stories, Emily realizes she’s started a tradition she never knew she needed. A tradition of love, 
+	<br>Hillary places an arm around Emily’s shoulders. “So? What do you think?”
+	<br>Emily blinks back tears and smiles. “I think… this is the best Christmas gift I’ve ever gotten. Thank you, all of you.”
+	<br>Phillip grins. “You’re welcome! It was our pleasure.”
+	<br>And as the friends gather around the tree, sipping hot chocolate and sharing stories, Emily realizes she’s started a tradition she never knew she needed. A tradition of love, 
 	laughter, and the reminder that she’s never truly alone.
     </p>
 </body>
