--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="story.css">
 </head>
 <body>
+    <h1>Emily's Holiday Tradition</h1>
     <p>
 	<br>It was Friday, and Emily was walking back home from school on a light snow day. As she walked past her neighbor Phillip's house, she heard a weird, loud noise. 
 	Curious as to what it was, she slowly walked towards Phillip's garage. As she peaked through the window, she saw Phillip covered in pieces of tape,
