--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Emily's Holiday Tradition</h1>
+<div class="container">
     <p>
 	<br>It was Friday, and Emily was walking back home from school on a light snow day. As she walked past her neighbor Phillip's house, she heard a weird, loud noise. 
 	Curious as to what it was, she slowly walked towards Phillip's garage. As she peaked through the window, she saw Phillip covered in pieces of tape,
@@ -46,5 +47,6 @@
 	<br>And as the friends gather around the tree, sipping hot chocolate and sharing stories, Emily realizes she’s started a tradition she never knew she needed. A tradition of love, 
 	laughter, and the reminder that she’s never truly alone.
     </p>
+</div>
 </body>
 </html>
