--- a/pages/story_3.html
+++ b/pages/story_3.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="" />
     <title>Story #3</title>
+    <link rel="stylesheet" href="story.css">
 </head>
 <body>
     <p>
