--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -24,7 +24,7 @@
 			<br><br>Realizing this, Phillip thinks of a brilliant idea. He is committed to giving Emily the best Christmas gift he can. 
 			That evening, Phillip calls all of his friends and tells them about his plan. They are all excited to help!
 			<br><br>The next morning, Emily wakes up and goes downstairs to eat whatever goods she can find. She starts walking by the living room when she hears... 
-			<be><em>"MERRY CHRISTMAS!!!"</em>
+			<be><strong>"MERRY CHRISTMAS!!!"</strong>
 			<br><br>Emily freaks out for a second, then she realizes all of her friends are in her living room! 
 			<br><br>"What are you all doing here?" Emily asks. 
 			<br><br>Hillary comes forth and says, "We are here to create a holiday tradition!"
