--- a/pages/story_2.html
+++ b/pages/story_2.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="story.css">
 </head>
 <body>
-    <p>
-        
-    </p>
+    <h1></h1>
+	<div class="container">
+        <p>
+            <br>
+        </p>
+    </div>
 </body>
 </html>
