--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -12,7 +12,7 @@
     <h1>Emily's Holiday Tradition</h1>
 	<div class="container">
 	    <p>
-			<br><br>It was Friday, and Emily was walking back home from school on a light snow day. As she walked past her neighbor Phillip's house, she heard a weird, loud noise. 
+			<br>It was Friday, and Emily was walking back home from school on a light snow day. As she walked past her neighbor Phillip's house, she heard a weird, loud noise. 
 			Curious as to what it was, she slowly walked towards Phillip's garage. As she peaked through the window, she saw Phillip covered in pieces of tape,
 			on the floor, and many scraps of paper. 
 			<br><br>Emily rushes over to the front door to try to help him out. The door is unlocked (for some reason) so she heads over to the garage and shouts, "Are you okay, Phillip?!"
