--- a/adventcalendar.html
+++ b/adventcalendar.html
@@ -110,7 +110,7 @@
         const content1 = "On the 1st day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/xmascard.png"></a>' /* xmas card */;
         const content2 = "On the 2nd day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/quote_1.png"></a>' /* xmas/frozen quote */;
         const content3 = "On the 3rd day of Christmas a robot gave to me... " + '<br><a href=""><img height="200" src="./img/quote_2.png"></a>' /* xmas/frozen quote */;
-        const content4 = "On the 4th day of Christmas a robot gave to me... " + '<br><a href="https://crosswordlabs.com/view/christmas-crossword-4110"><img width="210" crossword_1.png"></a>' /* crossword */;
+        const content4 = "On the 4th day of Christmas a robot gave to me... " + '<br><a href="https://crosswordlabs.com/view/christmas-crossword-4110"><img width="210" src="./img/crossword_1.png"></a>' /* crossword */;
         const content5 = "On the 5th day of Christmas a robot gave to me... " + '<br><a href="https://crosswordlabs.com/view/xmas-crossword-62"><img width="210" src="./img/crossword_2.png"></a>' /* crossword */; 
         const content6 = "On the 6th day of Christmas a robot gave to me... " + '<br><a href="https://thewordsearch.com/puzzle/124/christmas/#google_vignette"><img height="300" src="./img/wordsearch_1.png"></a>' /* wordsearch */;
         const content7 = "On the 7th day of Christmas a robot gave to me... " + '<br><a href="https://thewordsearch.com/puzzle/7785329/more-christmas/"><img height="300" src="./img/wordsearch_2.png"></a>' /* wordsearch */;
