--- a/pages/story_2.html
+++ b/pages/story_2.html
@@ -12,7 +12,7 @@
     <h1></h1>
 	<div class="container">
         <p>
-            <br>
+            <br>Old McGraw was planning his vacation to the Bahamas out on his porch
         </p>
     </div>
 </body>
