--- a/pages/story_2.html
+++ b/pages/story_2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="story.css">
 </head>
 <body>
-    <h1></h1>
+    <h1>A Change of Heart</h1>
 	<div class="container">
         <p>
             <br>Old McGraw was planning his vacation to the Bahamas out on his porch. He really despises the cold, so ever winter, he is like a birdie, migrating to a warmer climate. 
