--- a/pages/story_3.html
+++ b/pages/story_3.html
@@ -12,7 +12,9 @@
     <h1></h1>
 	<div class="container">
         <p>
-            
+            Every Christmas, the Navarro get excited for one of grandma's special culinary dishes. She's kept all the recipes from everyone. 
+
+But grandma's not been feeling great, so she couldn't make any dish. So she senddsds them on a fun quest to get the recipe for one dish in paasarticular, Amy's favorite. 
         </p>
     </div>
 </body>
